webfaf: Fix table cell word-wrapping
Using `table-layout: fixed` makes all columns in the table same width, disregarding
the contents.

This PR changes the behaviour to word wrap table headers on spaces/hyphens and
table cells on anything as needed.

--- a/src/webfaf/static/css/style.css
+++ b/src/webfaf/static/css/style.css
@@ -1452,9 +1452,11 @@ li.empty-line:last-child {
   display:none;
 }
 
-.table {
-  table-layout: fixed;
-  width: 100%;
+.table tr td {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-all;
+  word-break: break-word;
 }
 
 .col-1-of-15 {
